[package]
name = "regex-redos"
version = "0.1.0"
edition = "2021"
description = "ReDoS (catastrophic-backtracking) regex safety check"
license = "MIT"
repository = "https://github.com/hey-jj/regex-redos"
readme = "README.md"
keywords = ["regex", "redos", "security", "backtracking", "safety"]
categories = ["text-processing", "algorithms"]

[dependencies]
