[package]
name = "regex-redos"
version = "0.2.0"
edition = "2021"
description = "ReDoS (catastrophic-backtracking) regex safety check"
license = "MIT"
repository = "https://github.com/hey-jj/regex-redos"
readme = "README.md"
keywords = ["regex", "redos", "security", "backtracking", "safety"]
categories = ["text-processing", "algorithms"]

[dependencies]
unicode-id-start = "1.4.0"
